@@ -1,3 +1,10 @@
+2005-09-02  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Don't call ACCESS on open.  Will do this properly with atomic
+	open/create
+
+	* Fix compile warning on 2.6.13 and later
+
 2005-08-25  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lib: add userspace side of ftruncate() method for experimentation
